[package]
name = "gyt"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "A small modern Rust git-alternative"
license = "GPL-3.0-or-later"

[dependencies]
blake3 = "=1.8.5"
wasmtime = "=28.0.1"
ed25519-dalek = { version = "=2.1.1", features = ["fast", "rand_core"] }
rand = "=0.8.5"
rustls = { version = "=0.23.40", default-features = false, features = ["std", "logging", "ring"] }
rustls-pki-types = "=1.14.1"
webpki-roots = "=1.0.7"
lzma-rust2 = { version = "=0.16.2", default-features = false, features = ["std", "xz", "encoder"] }
include_dir = "=0.7.4"
aes-gcm = "=0.10.3"
signal-hook = { version = "=0.4.4", default-features = false, features = ["iterator"] }
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "net", "macros", "io-util", "sync", "time"] }
tokio-rustls = { version = "=0.26.4", default-features = false, features = ["logging", "ring"] }
hyper = { version = "=1.9.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "=0.1.20", features = ["server", "tokio", "http1", "http2", "server-auto"] }
http-body-util = "=0.1.3"
bytes = "=1.11.1"
quinn = { version = "=0.11.9", default-features = false, features = ["log", "runtime-tokio", "ring", "rustls", "bloom"] }
h3 = "=0.0.8"
h3-quinn = "=0.0.10"
http = "=1.4.0"
socket2 = { version = "=0.6.3", features = ["all"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# === STRICT CLIPPY HARNESSES ===
#
# Policy: every clippy group is `deny`. The only escape hatches are the
# `allow` entries below — each has a one-line reason. New allows require
# a documented justification (see AGENTS.md / Clippy policy section).
# Anything else must be FIXED at the call site, not silenced.
[lints.rust]
unsafe_code = "deny"
unused = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }

[lints.clippy]
# Promote every clippy group to `deny`. New code must be clean.
correctness = { level = "deny", priority = -10 }
suspicious = { level = "deny", priority = -10 }
complexity = { level = "deny", priority = -10 }
perf = { level = "deny", priority = -10 }
style = { level = "deny", priority = -10 }
pedantic = { level = "deny", priority = -10 }
nursery = { level = "deny", priority = -10 }
cargo = { level = "deny", priority = -10 }

# ── Honest allowlist ───────────────────────────────────────────────
# Each line below is a clippy lint we deliberately don't enforce, with a
# one-line reason. Anything not on this list is mandatory.

# CLI tooling prints to stdout; that's the whole point.
print_stdout = "allow"
print_stderr = "allow"
# Identifiers come from external systems (git refs, branch names, etc.).
# `similar_names` and `struct_field_names` produce false positives constantly.
module_name_repetitions = "allow"
similar_names = "allow"
struct_field_names = "allow"
# Documentation completeness is enforced by code review, not the linter —
# enforcing these on every internal helper bloats signatures with empty
# Errors/Panics sections.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
# A version-control tool unavoidably manipulates byte buffers and indices
# from u32-sized headers; the alternative is `usize::try_from(...)` on every
# line, which makes the code worse without finding bugs.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
# Long command-dispatch and codec functions are clearer in one place.
too_many_lines = "allow"
# Cargo.lock has duplicate transitive deps we can't deduplicate without
# patching upstream. Reviewed during `cargo update`.
multiple_crate_versions = "allow"
# Reading `?` macros in doc comments routinely triggers this.
doc_markdown = "allow"
# Required because the test_support module exercises identifiers like
# `commit::write` from a context where this lint is over-eager.
must_use_candidate = "allow"
# Float comparison is fine for our few timestamp/diff use cases (all i64).
float_cmp = "allow"
# Often we *want* `e.into_iter().map(...)` on Vec<T>.
needless_collect = "allow"
# pedantic noise on `Result<()>` returning helpers that conceivably could
# fail under future expansion.
unnecessary_wraps = "allow"
# Match patterns that look at `_ | other` are intentional in CLI parsers.
match_same_arms = "allow"
# Compatibility-style code in protocol/object encoding sometimes prefers
# explicit chained `if let` patterns over `let-else` for readability.
manual_let_else = "allow"
# Some tests explicitly need `.clone()` to avoid lifetime gymnastics.
redundant_clone = "allow"
# String concat with `.push_str(&format!(...))` is occasionally clearer
# than `write!`. Both produce the same machine code.
format_push_string = "allow"
# Trait impls in test modules occasionally trip this on Default impls.
default_trait_access = "allow"
# When implementing PartialOrd manually for ObjectId comparisons.
non_canonical_partial_ord_impl = "allow"
# `Result<T>` aliases collide with `std::io::Result`; we intentionally use
# both, naming them explicitly at call sites that mix them.
result_large_err = "allow"
# Hand-rolled JSON / TOML serializers use `&[(&str, String)]` arg lists
# which would otherwise trip `single_match_else` / `option_if_let_else`.
single_match_else = "allow"
option_if_let_else = "allow"
# Not publishing to crates.io — `package.repository`, `keywords`,
# `categories` would be vanity entries.
cargo_common_metadata = "allow"
# Tests legitimately have helper methods called only from a subset of test
# bodies (`#[test]` items pull from a shared scaffolding struct).
unused_self = "allow"
